removed .html prefix from links

--- a/games.html
+++ b/games.html
@@ -62,9 +62,9 @@
 	</section>
 	<section class="menu">
 	    <nav>
-	        <a id="item1" title="work" href='/work.html'><i class="icon-doc-text-inv"></i><span>work</span></a>
+	        <a id="item1" title="work" href='/work'><i class="icon-doc-text-inv"></i><span>work</span></a>
 	        <a id="item2" title="home" href='/'><i class="icon-home"></i><span>home</span></a>
-	        <a id="item3" title="lab" href="/lab.html"><i class="icon-beaker"></i><span>lab</span></a>
+	        <a id="item3" title="lab" href="/lab"><i class="icon-beaker"></i><span>lab</span></a>
 	    </nav>
 	</section>
 	<section class="contact">
