--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
   		<article>
 	        <h2>I currently...</h2>
 	        <p>work for <a href="http://www.mailmangroup.com">Mailman Group</a> in Shanghai as a web developer</p>
-	        <p>I am actively working on <a href="http://www.gousa.cn">gousa.cn</a> (frontend developer) and <a href="http://kawo.com">kawo.com</a> (web-app QA + Testing) <small><a href='/work.html'>(previous projects)</a></small></p>
+	        <p>I am actively working on <a href="http://www.gousa.cn">gousa.cn</a> (frontend developer) and <a href="http://kawo.com">kawo.com</a> (web-app QA + Testing) <small><a href='/work'>(previous projects)</a></small></p>
 	        <p>When I am not working on innovative projects, I am developing <a href="/games">web &amp; mobile games</a>, cooking and being a loving husband</p>
         </article>
     </section>
     <section class="menu">
         <nav>
-            <a id="item1" title="games" href='/games.html'><i class="icon-gamepad"></i><span>games</span></a>
-            <a id="item2" title="work" href='/work.html'><i class="icon-doc-text-inv"></i><span>work</span></a>
-            <a id="item3" title="lab" href="/lab.html"><i class="icon-beaker"></i><span>lab</span></a>
+            <a id="item1" title="games" href='/games'><i class="icon-gamepad"></i><span>games</span></a>
+            <a id="item2" title="work" href='/work'><i class="icon-doc-text-inv"></i><span>work</span></a>
+            <a id="item3" title="lab" href="/lab"><i class="icon-beaker"></i><span>lab</span></a>
         </nav>
     </section>
     <section class="contact">
