--- a/work.html
+++ b/work.html
@@ -90,9 +90,9 @@
 	</section>
 	<section class="menu">
 	    <nav>
-	        <a id="item1" title="games" href='/games.html'><i class="icon-gamepad"></i><span>games</span></a>
+	        <a id="item1" title="games" href='/games'><i class="icon-gamepad"></i><span>games</span></a>
 	        <a id="item2" title="home" href='/'><i class="icon-home"></i><span>home</span></a>
-	        <a id="item3" title="lab" href="/lab.html"><i class="icon-beaker"></i><span>lab</span></a>
+	        <a id="item3" title="lab" href="/lab"><i class="icon-beaker"></i><span>lab</span></a>
 	    </nav>
 	</section>
 	<section class="contact">
