Compatibility with other browsers
also lowered support to IE 9 from 8

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<section class="opener">
-		<!--[if lt IE 7]>
+		<!--[if lt IE 8]>
 		<p class="browsehappy"><i class="icon-attention"></i>HEY! Thanks for visiting my site, unfortunately you seem to be using an <strong>outdated</strong> browser.<br/>Please <a href="http://browsehappy.com/">upgrade your browser</a> to view my site they way it was meant to be viewed.</p>
 		<![endif]-->
 
@@ -60,7 +60,7 @@
   		<article>
 	        <h2>I currently...</h2>
 	        <p>work for <a href="http://www.mailmangroup.com">Mailman Group</a> in Shanghai as a web developer</p>
-	        <p>I am actively working on <a href="http://www.gousa.cn">gousa.cn</a> (frontend developer) and <a href="http://kawo.com">kawo.com</a> (web-app QA + Testing) <small><a href='/work'>(previous projects)</a></small></p>
+	        <p>I am actively working on <a href="http://www.gousa.cn">gousa.cn</a> (frontend developer) and <a href="http://kawo.com">kawo.com</a> (web-app QA + Testing)</p>
 	        <p>When I am not working on innovative projects, I am developing <a href="/games">web &amp; mobile games</a>, cooking and being a loving husband</p>
         </article>
     </section>
