Content fixing + better CSS

--- a/games.html
+++ b/games.html
@@ -42,21 +42,21 @@
  			</p>
  				<img src="img/commuterfling.jpg" alt="Commuter Fling screenshot 1" />
  			<p>
- 				<a href="http://jamessimo.github.io/Commuter-Fling/"><i class="icon-globe"></i>&nbsp;visit game site</a>
+ 				<a title="Commuter Fling!" href="http://jamessimo.github.io/Commuter-Fling/" target="_blank"><i class="icon-globe"></i>&nbsp;visit game site</a>
  			</p>
  			
 	    	<h2>Crazy Lunar Taxi</h2>
 	    	<p>Akin to the old Sega "Crazy Taxi" and Ataris 1979 "Lunar Lander". Its the future and you have to pickup passangers and get them to there destination as soon as possible.</p> 
 	    	<img src="img/crazytaxi.png" alt="Crazy Lunar Taxi screenshot 1"/>
 	    	<p>
-	    		<a href="http://crazylunartaxi.tumblr.com/"><i class="icon-globe"></i>&nbsp;visit game site</a>
+	    		<a title="Crazy Lunar Taxi" href="http://crazylunartaxi.tumblr.com/" target="_blank"><i class="icon-globe"></i>&nbsp;visit game site</a>
 	    	</p>
 
 	    	<h2>Face Glof</h2>
 	    	<p>Made in 48 hours with 3 other people for Cambridge Games Jam 2010 (Brains Eden Jam)</p> 
 	    	<img src="img/faceglof.jpg" alt="Face Glof screenshot 1"/>
 	    	<p>
-	    		<a href="http://cambridgeindies.com/games/face-glof-0"><i class="icon-globe"></i>&nbsp;visit game site</a>
+	    		<a title="Face Glof" href="http://cambridgeindies.com/games/face-glof-0" target="_blank"><i class="icon-globe"></i>&nbsp;visit game site</a>
 	    	</p>
 	    </article>
 	</section>
@@ -80,7 +80,7 @@
 	<footer>
     	<div class="wrapper">
     		<p>site conceived, designed, implemented, tested and delivered by <strong>James Simonson</strong> 2014.</p>
-    		<small>hosted on<a title="Github is awesome!" href="https://pages.github.com/" target="_blank"> github <i class="icon-github"></i></a></small>
+    		<small>hosted on<a title="Github Pages are awesome!" href="https://pages.github.com/" target="_blank"> github <i class="icon-github"></i></a></small>
     	</div>
     </footer>
     <script src="js/plugins.js"></script>
