--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 	<section class="opener">
 		<!--[if lt IE 8]>
-		<p class="browsehappy"><i class="icon-attention"></i>HEY! Thanks for visiting my site, unfortunately you seem to be using an <strong>outdated</strong> browser.<br/>Please <a href="http://browsehappy.com/">upgrade your browser</a> to view my site they way it was meant to be viewed.</p>
+		<p class="browsehappy">HEY! Thanks for visiting my site, unfortunately you seem to be using an <strong>outdated</strong> browser.<br/>Please <a href="http://browsehappy.com/">upgrade your browser</a> to view my site they way it was meant to be viewed.</p>
 		<![endif]-->
 
 		<!--<p class="shoutbox"><i class="icon-megaphone">Announcement:</i> GOOD NEWS! <a href="http://jamessimo.github.io/Commuter-Fling/">Commuter Fling!</a> has just been <strong>launched</strong> on the google play store! <a id="close-shout" href="#"><i class="icon-cancel"></i><i class="icon-megaphone"></i></a></p>-->
@@ -58,10 +58,10 @@
 	  	</section>
   	<section class="about">
   		<article>
-	        <h2>I currently...</h2>
-	        <p>work for <a href="http://www.mailmangroup.com">Mailman Group</a> in Shanghai as a web developer</p>
-	        <p>I am actively working on <a href="http://www.gousa.cn">gousa.cn</a> (frontend developer) and <a href="http://kawo.com">kawo.com</a> (web-app QA + Testing)</p>
-	        <p>When I am not working on innovative projects, I am developing <a href="/games">web &amp; mobile games</a>, cooking and being a loving husband</p>
+	        <h2>About</h2>
+	        <p>I currently work for <a title="One of the biggest social media agencys in china, focusing on sport, tourisum and entertainment" href="http://www.mailmangroup.com" target="_blank">Mailman Group</a> in Shanghai as a web developer</p>
+	        <p>I am actively working on <a title="Site to promote chinese tourisum in the USA" href="http://www.gousa.cn">gousa.cn</a> (frontend developer) and <a title="Translation + analyitics platform for world class brands inside of China" href="http://kawo.com" target="_blank">kawo.com</a> (web-app QA + Testing)</p>
+	        <p>When I am not working on innovative projects, I am developing <a title="Check out my games!" href="/games">web &amp; mobile games</a>, cooking and being a loving husband</p>
         </article>
     </section>
     <section class="menu">
