--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-    
     <script src="js/plugins.js"></script>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -129,8 +128,9 @@
 			ga('send', 'event', 'github', 'click');
 		});
 		jQuery('#wechat').click( function() {
+			ga('send', 'event', 'wechat', 'click');
 			jQuery("#wechatqrcode").toggleClass('show');
-		     return false;
+		    return false;
 		});
 	</script>
 </body>
