--- a/work.html
+++ b/work.html
@@ -120,19 +120,36 @@
     <script src="js/plugins.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-    <script>
+	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 		
 		ga('create', 'UA-50342249-1', 'jamessimo.com');
+		ga('require', 'linkid', 'linkid.js');
 		ga('send', 'pageview');
 		
-		jQuery('#wechat').click( function() {
-			jQuery("#wechatqrcode").toggleClass('show');
-		     return false;
+		jQuery('#email').click(function(){
+			ga('send', 'event', 'email', 'click');
 		});
-    </script>
-</body>
+		jQuery('#twitter').click(function(){
+			ga('send', 'event', 'twitter', 'click');
+		});
+		jQuery('#gplus').click(function(){
+			ga('send', 'event', 'googleplus', 'click');
+		});
+		jQuery('#linkedin').click(function(){
+			ga('send', 'event', 'linkedin', 'click');
+		});
+		jQuery('#github').click(function(){
+			ga('send', 'event', 'github', 'click');
+		});
+		jQuery('#wechat').click( function() {
+			ga('send', 'event', 'wechat', 'click');
+			jQuery("#wechatqrcode").toggleClass('show');
+			return false;
+		});
+	</script>
+   </body>
 </html>
