--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<!--<p class="shoutbox"><i class="icon-megaphone">Announcement:</i> GOOD NEWS! <a href="http://jamessimo.github.io/Commuter-Fling/">Commuter Fling!</a> has just been <strong>launched</strong> on the <a title="Download now!">Apple app store</a> for iPad! <a id="close-shout" href="#"><i class="icon-cancel"></i><i class="icon-megaphone"></i></a></p-->
 		
-	 	<h1>Hi! i'm James.</h1>
+	 	<h1>Hi! I'm James.</h1>
         <h2>This is what I do</h2>
         <article class="my-body">
 	       	<ul class="frontendlist">
