--- a/games.html
+++ b/games.html
@@ -30,7 +30,7 @@
     	
         <article>
  			<h2>Commuter Fling!</h2>
- 			<p>My first entry into the HTML5 game world. You have to throw commuters across a river into their correct companies.</p>
+ 			<p>My first entry into the HTML5 game world. You have to throw commuters across a river into their correct companies during rush hour. This game is currently being ported to iPad (iOS).</p>
  			<!--<p>
  			<ul>
  				<li>HTML5</li>
@@ -40,20 +40,20 @@
  				<li>Box2D</li>
  			</ul>-->
  			</p>
- 				<img src="img/commuterfling.jpg" alt="Commuter Fling screenshot 1" />
+ 				<img src="img/commuterfling.png" alt="Commuter Fling screenshot 1" />
  			<p>
  				<a title="Commuter Fling!" href="http://jamessimo.github.io/Commuter-Fling/" target="_blank"><i class="icon-globe"></i>&nbsp;visit game site</a>
  			</p>
  			
 	    	<h2>Crazy Lunar Taxi</h2>
-	    	<p>Akin to the old Sega "Crazy Taxi" and Ataris 1979 "Lunar Lander". Its the future and you have to pickup passangers and get them to there destination as soon as possible.</p> 
+	    	<p>Akin to the old Sega "Crazy Taxi" and Ataris 1979 "Lunar Lander". Its the future and you have to pickup passangers and get them to there destination as soon as possible. Built in Unity 3, currently on hiatus.</p> 
 	    	<img src="img/crazytaxi.png" alt="Crazy Lunar Taxi screenshot 1"/>
 	    	<p>
 	    		<a title="Crazy Lunar Taxi" href="http://crazylunartaxi.tumblr.com/" target="_blank"><i class="icon-globe"></i>&nbsp;visit game site</a>
 	    	</p>
 
 	    	<h2>Face Glof</h2>
-	    	<p>Made in 48 hours with 3 other people for Cambridge Games Jam 2010 (Brains Eden Jam)</p> 
+	    	<p>Made in 48 hours with 3 other people for Cambridge Games Jam 2010 (Brains Eden Jam).</p> 
 	    	<img src="img/faceglof.jpg" alt="Face Glof screenshot 1"/>
 	    	<p>
 	    		<a title="Face Glof" href="http://cambridgeindies.com/games/face-glof-0" target="_blank"><i class="icon-globe"></i>&nbsp;visit game site</a>
