--- a/lab.html
+++ b/lab.html
@@ -63,7 +63,7 @@
 			<a id="gplus" title="google plus" href="https://plus.google.com/107967684340447771271/" class="icon-gplus" target="_blank"></a>
 			<a id="linkedin" title="linkedin" href="https://www.linkedin.com/pub/james-simonson/94/b/51b" class="icon-linkedin-squared" target="_blank"></a>
 			<a id="github" title="github" href="https://github.com/jamessimo" class="icon-github" target="_blank"></a>
-			<div style="display: inline; position:relative;"><a id="wechat" title="wechat" href="#" class="icon-qrcode"></a>
+			<div style="display: inline; position:relative;"><a id="wechat" title="wechat" href="#" class="icon-wechat"></a>
 				<div id="wechatqrcode"><img src="img/myqrcode.png" />
 					<div class="arrow-down"></div>
 				</div>
@@ -78,6 +78,8 @@
     </footer>
 
     <script src="js/plugins.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+    
 	<script>
 		
 		$( window ).resize(function() {
@@ -101,8 +103,7 @@
 		$( window ).resize();
 		
 	</script>
-	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-    <script>
+	    <script>
     	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
