--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         	<a id="gplus" title="google plus" href="https://plus.google.com/107967684340447771271/" class="icon-gplus" target="_blank"></a>
         	<a id="linkedin" title="linkedin" href="https://www.linkedin.com/pub/james-simonson/94/b/51b" class="icon-linkedin-squared" target="_blank"></a>
         	<a id="github" title="github" href="https://github.com/jamessimo" class="icon-github" target="_blank"></a>
-        	<div style="display: inline; position:relative;"><a id="wechat" title="wechat" href="#" class="icon-wechat"></a>
+        	<div style="display: inline; position:relative;"><a id="wechat" title="wechat" href="#" class="icon-qrcode"></a>
         		<div id="wechatqrcode"><img src="img/myqrcode.png" />
         			<div class="arrow-down"></div>
         		</div>
