--- a/work.html
+++ b/work.html
@@ -1,31 +1,7 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>James Simonson | Work History</title>
-	<meta name="description" content="Web & Games developer living in Shanghai.">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<meta property="og:title" content="James Simonson | Web Developer">
-	<meta property="og:image" content="img/og.jpg">
-	<meta property="og:description" content="Web & Games developer living in Shanghai.">
-	
-	
-	<link rel="stylesheet" href="css/normalize.min.css">
-	<link rel="stylesheet" href="css/jamessimofont.css">
-	<link rel="stylesheet" href="css/main.css">
-	
-	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
-</head>
-<body>
-    <!--[if lt IE 8]>
-        <p class="browsehappy">HEY! Thanks for visiting my site, unfortunately you seem to be using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to view my site they way it was meant to be viewed.</p>
-    <![endif]-->
- 
+---
+layout: default
+title: work
+---
     <section class="work">
     <h1>The work of James Simonson</h1>
     <p class="subtitle">projects that I have had the privilege to work on</p>
@@ -46,14 +22,6 @@
 					<li>SEO</li>
 				</ul>
 			</div>
-			<!--<div>
-				<h2>mvip.com</h2>
-				<ul>
-					<li>Data Architect + Data Modelling</li>
-					<li>UX + Frontend</li>
-					<li>Drupal Full Stack Developer</li>
-				</ul>
-			</div>-->
 			<div>
 				<h2>kawo.com + app.kawo.com</h2>
 				<ul>
@@ -109,66 +77,7 @@
 	    <nav>
 	        <a id="item1" title="games" href='/games'><i class="icon-gamepad"></i><span>games</span></a>
 	        <a id="item2" title="home" href='/'><i class="icon-home"></i><span>home</span></a>
-	        <a id="item3" title="lab" href="/lab"><i class="icon-beaker"></i><span>lab</span></a>
+	        <a id="item3" title="blog" href="/blog"><i class="icon-pencil"></i><span>blog</span></a>
 	    </nav>
 	</section>
-	<section class="contact">
-		<article>
-			<a id="email" title="email" href="mailto:jamessimo@outlook.com" class="icon-mail-alt"></a>
-			<a id="twitter" title="twitter" href="https://twitter.com/james_simo" class="icon-twitter" target="_blank"></a>
-			<a id="gplus" title="google plus" href="https://plus.google.com/107967684340447771271/" class="icon-gplus" target="_blank"></a>
-			<a id="linkedin" title="linkedin" href="https://www.linkedin.com/pub/james-simonson/94/b/51b" class="icon-linkedin-squared" target="_blank"></a>
-			<a id="github" title="github" href="https://github.com/jamessimo" class="icon-github" target="_blank"></a>
-			<div style="display: inline; positimailto:jamessimo@outlook.com?subject=Hi James!on:relative;"><a id="wechat" title="wechat" href="#" class="icon-wechat"></a>
-				<div id="wechatqrcode"><img src="img/myqrcode.png" />
-					<div class="arrow-down"></div>
-				</div>
-			</div>
-		</article>
-	</section>
-	<footer>
-    	<div class="wrapper">
-    		<p>site conceived, designed, implemented, tested and delivered by <strong>James Simonson</strong> 2014.</p>
-    		<small>hosted on<a title="Github is awesome!" href="https://pages.github.com/" target="_blank"> github <i class="icon-github"></i></a></small>
-    	</div>
-    </footer>
-
-    <script src="js/plugins.js"></script>
-	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		
-		ga('create', 'UA-50342249-1', 'jamessimo.com');
-		ga('require', 'linkid', 'linkid.js');
-		ga('send', 'pageview');
-		
-		jQuery('#email').click(function(){
-			ga('send', 'event', 'email', 'click');
-		});
-		jQuery('#twitter').click(function(){
-			ga('send', 'event', 'twitter', 'click');
-		});
-		jQuery('#gplus').click(function(){
-			ga('send', 'event', 'googleplus', 'click');
-		});
-		jQuery('#linkedin').click(function(){
-			ga('send', 'event', 'linkedin', 'click');
-		});
-		jQuery('#github').click(function(){
-			ga('send', 'event', 'github', 'click');
-		});
-		jQuery('#wechat').click( function() {
-			ga('send', 'event', 'wechat', 'click');
-			jQuery("#wechatqrcode").toggleClass('show');
-			return false;
-		});
-
-		if(jQuery('body').height() < jQuery( window ).height()){
-			jQuery('.work .history').height(jQuery('.work .history').height() + (jQuery(window).height() - jQuery( 'body' ).height()));
-		}
-	</script>
-   </body>
-</html>
+	
