Update home info + moved unfinished blogs

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ title: home
   	<section class="about">
   		<article>
 	        <h2>About</h2>
-	        <p>I currently work for <a title="One of the biggest social media agencys in china, focusing on sport, tourisum and entertainment" href="http://www.mailmangroup.com" target="_blank">Mailman Group</a> in Shanghai as a web developer</p>
-	        <p>I am actively working on <a title="Site to promote chinese tourisum in the USA" href="http://www.gousa.cn">gousa.cn</a> (frontend developer) and <a title="Translation + analyitics platform for world class brands inside of China" href="http://kawo.com" target="_blank">kawo.com</a> (web-app QA + Testing)</p>
-	        <p>When I am not working on innovative projects, I am developing <a title="Check out my games!" href="/games">web &amp; mobile games</a>, cooking and being a loving husband</p>
+	        <p>I am currently working as <b>Lead UX/UI Designer</b> for Yick Solutions in Suzhou, China</p>
+	        <p>I design and develop robust HTML5 web applications for large enterprise grade clients</p>
+	        <p>When I am not working on innovative projects, I am developing <a title="Check out my games!" href="/games">web &amp; mobile games</a>, cooking, <a title="my thoughts I demand you read" href="/blog">blogging</a> and being a loving husband <i class="icon-heart"></i></p>
         </article>
     </section>
