Update Copyright year & added teaser
OOoohhhh whats is the teaser? ;)

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@ title: home
 		<![endif]-->
 
 		<!--<p class="shoutbox"><i class="icon-megaphone">Announcement:</i> GOOD NEWS! <a href="http://jamessimo.github.io/Commuter-Fling/">Commuter Fling!</a> has just been <strong>launched</strong> on the <a title="Download now!">Apple app store</a> for iPad! <a id="close-shout" href="#"><i class="icon-cancel"></i><i class="icon-megaphone"></i></a></p>-->
-		
+
 	 	<h1>Hi! I'm James.</h1>
         <h2>This is what I do</h2>
-        
+
         <p>
         	<a id="show-all" class="icon-plus" href="#"></a>
         </p>
-        
+
         <article class="my-body">
 	       	<ul class="frontendlist">
 	            <li class="html">HTML5 <span class="long">I use the most up-to-date HTML including the canvas!</span> </li>
@@ -46,6 +46,6 @@ title: home
 	        <h2>About</h2>
 	        <p>I am currently working as <b>Lead UX/UI Designer</b> for Yick Solutions in Suzhou, China</p>
 	        <p>I design and develop robust HTML5 web applications for large enterprise grade clients</p>
-	        <p>When I am not working on innovative projects, I am developing <a title="Check out my games!" href="/games">web &amp; mobile games</a>, cooking, <a title="my thoughts I demand you read" href="/blog">blogging</a> and being a loving husband <i class="icon-heart"></i></p>
+	        <p>When I am not working on innovative projects, I am developing <a title="Check out my games!" href="/games">web &amp; mobile games</a>, cooking, <a title="my thoughts I demand you read" href="/blog">blogging</a> and being a loving husband &amp; father<i class="icon-heart"></i></p>
         </article>
     </section>
