Fixed mobile menu bug
Also added Reach for the Star to Games/

--- a/games.html
+++ b/games.html
@@ -12,19 +12,19 @@ title: games
           <p>I am currently working on a new project which is in the vein of old 90's classic "Tycoon" style PC games. I will update once I have finished the Early Alpha.</p>
 
           <img src="img/teaserf.jpg" alt="OOohhhh mysterious " />
-<p>&nbsp;</p>
 
-		   <!-- <h2>Reach for the Star!</h2>
+          &nbsp;
+		   <h2>Reach for the Star!</h2>
 		    <p>
-          Reach for the Star is a small physics puzzle game I developed for iOS and Android
+          Reach for the Star is a small physics puzzle game I developed for iOS and Android built using HTML5 & Javascript using <a href="http://iio.js.org" target="_blank">iio.js</a> &amp; <a href="http://cocoon.io/" target="_blank">Cocoon</a>
         </p>
 
 		    </p>
-		    	<img src="img/rechforthestar.png" alt="Reach for the Star screenshot 1" />
+		    	<img src="img/blockstacking.png" alt="Reach for the Star screenshot 1" />
 		    <p>
-		    	<a title="Reach for the Star trailer on YouTube" href="https://www.youtube.com/watch?v=RMZplixVwvE" target="_blank"><i class=" fa-youtube-play"></i>&nbsp;View Trailer</a>
+		    	<a title="Reach for the Star trailer on YouTube" href="https://www.youtube.com/watch?v=RMZplixVwvE" target="_blank"><i class="icon-desktop"></i>&nbsp;View Trailer</a>
 		    </p>
-        -->
+
 
  			<h2>Commuter Fling!</h2>
  			<p>My first entry into the HTML5 game world. You have to throw commuters across a river into their correct companies during rush hour. This game is currently being ported to iPad (iOS).</p>
