New article and updates
Updated Work
Updated Homepage
added new blog post
removed broken tags links

--- a/index.html
+++ b/index.html
@@ -23,29 +23,38 @@ title: home
 	            <li class="sass">SASS <span>Using SASS, my code is readable and scaleable!</span> </li>
 	            <li class="js">Java Script <span class="long">I use Javascript to build webpages, apps and even games</span></li>
 	            <li class="jquery">jQuery <span>I want my javascript to work on all browsers</span></li>
-		            <li class="ux">Design + UX <span class="long">I strive to build beautiful and practical products</span></li>
+		          <li class="ux">Design + UX <span class="long">I strive to build beautiful and practical products</span></li>
 	            <li class="responsive">Responsive <span>I always design and develop mobile first</span></li>
 	        </ul>
 	        <div class="centertext">
-		        <!--<h3 class="frontend">Front End</h3>
-		        <h3 class="backend">Backend</h3>-->
+		      <!--<h3 class="frontend">Front End</h3>
+		        <h3 class="backend">Backend</h3>
+						Need to update...
+						Data visaualtion
+						wechat social intergration
+						nodejs
+						User Research
+						webGL
+
+					-->
 	        </div>
 	        <ul class="backendlist">
-		        <li class="php">PHP <span class="long" >Quickly building dynamic websites and services</span></li>
-		        <li class="drupal">Drupal <span class="long">I use Drupal to build massive content driven websites</span></li>
-		        <li class="sql">mySQL <span class="long">Massive content driven websites need a solid DB</span></li>
+		        <li class="php">NodeJS <span class="long" >Quickly building dynamic websites and services</span></li>
+		        <li class="drupal">User Research <span class="long">Understanding users by using a wide variety of tools and services</span></li>
+		        <li class="sql">WebGL <span class="long">Sometimes it is best to visualize it beyond 2D</span></li>
 		        <li class="mdb">MongoDB</li>
-		        <li class="seo">SEO <span class="long">I want people to easily find my awesome projects</span></li>
-		        <li class="wordp">WordPress<span>Extensive experience with Wordpress sites</span></li>
-		        <li class="unix">UNIX <span>I use UNIX + LINUX systems daily</span></li>
+						<li class="seo">Visualization <span class="long">Data is beautiful, data thats displayed properly is <b>gorgeous</b></span></li>
+
+		        <li class="wordp">SEO</li>
+		        <li class="unix">UNIX <span>I use UNIX &amp; Linux systems daily</span></li>
 	        </ul>
 	  		</article>
 	  	</section>
   	<section class="about">
   		<article>
 	        <h2>About</h2>
-	        <p>I am currently working as <b>Lead UX/UI Designer</b> for Yick Solutions in Suzhou, China</p>
-	        <p>I design and develop robust HTML5 web applications for large enterprise grade clients</p>
+	        <p>I am currently working as <b>Senior UX/UI Designer</b> for TradeShift in Suzhou, China</p>
+	        <p>I help lead innovation and create rich user exerpriances for a wide varaity of platforms with an amazing global team</p>
 	        <p>When I am not working on innovative projects, I am developing <a title="Check out my games!" href="/games">web &amp; mobile games</a>, cooking, <a title="my thoughts I demand you read" href="/blog">blogging</a> and being a loving husband &amp; father<i class="icon-heart"></i></p>
         </article>
     </section>
