--- a/work.html
+++ b/work.html
@@ -6,6 +6,13 @@ title: work
     <h1>The work of James Simonson</h1>
     <p class="subtitle">projects that I have had the privilege to work on</p>
 		<article class="history">
+      <blockquote>
+
+        <b class="red"><i class="icon-attention"> </i> This page is out of date!</b> Since 2014 till early 2016 I have been working for large banks and commodities brokers. The sensitive nature of this work means that I cannot disclose what I did publicly due to a number of non-discloser agreements (NDA) I have signed.
+     What I can disclose is that I rapidly designed and prototyped web apps using AngularJS as proof of concepts that communicated to a proprietary backend system.
+        As of April 2016 I am working at TradeShift.com as a senior UI/UX designer and you can always checkout my <a href="https://github.com/jamessimo" target="_blank">GitHub <i class="icon-github"></i></a>
+
+      </blockquote>
 			<div>
 				<h2>gousa.cn</h2>
 				<ul>
@@ -80,4 +87,3 @@ title: work
 	        <a id="item3" title="blog" href="/blog"><i class="icon-pencil"></i><span>blog</span></a>
 	    </nav>
 	</section>
-	
