Fixed Derp spelling mistake

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ title: home
   		<article>
 	        <h2>About</h2>
 	        <p>I am currently working as <b>Senior UX/UI Designer</b> for TradeShift in Suzhou, China</p>
-	        <p>I help lead innovation and create rich user exerpriances for a wide varaity of platforms with an amazing global team</p>
+	        <p>I help lead innovation and create rich user experiences for a wide varaity of platforms with an amazing global team</p>
 	        <p>When I am not working on innovative projects, I am developing <a title="Check out my games!" href="/games">web &amp; mobile games</a>, cooking, <a title="my thoughts I demand you read" href="/blog">blogging</a> and being a loving husband &amp; father<i class="icon-heart"></i></p>
         </article>
     </section>
