--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@ title: blog
   <div style="text-align:center">
     <div class="mediumLogo">
       <a href="https://medium.com/@james_simo" target="_blank">
-        <svg class="svgIcon-use" width="45" height="45" viewBox="-17 18 45 45" data-multipart="true"><path d="M11.525 28.078c-.472-.225-.858.002-.858.506v20.044l8.616 4.113c.948.46 1.717.14 1.717-.7v-19.3a.22.22 0 0 0-.124-.19l-9.35-4.46v-.01z"></path><path d="M.333 43.696l9.83-15.247c.278-.43.89-.6 1.36-.38l9.364 4.47c.06.03.082.1.047.15L10.666 48.63.333 43.698v-.002z"></path><path d="M-8.57 28.35c-.786-.375-1.053-.096-.592.62L.333 43.696l10.333 4.932L.356 32.635a.156.156 0 0 0-.06-.054l-8.866-4.23z"></path><path d="M.333 52.033c0 .84-.643 1.22-1.43.844l-8.045-3.84c-.472-.224-.858-.82-.858-1.325V28.89c0-.672.515-.976 1.145-.675l9.133 4.36a.092.092 0 0 1 .055.084v19.37z"></path></svg>
+        <svg class="svgIcon-use" width="45" height="45" viewBox="0 0 45 45"><path d="M5 40V5h35v35H5zm8.56-12.627c0 .555-.027.687-.318 1.03l-2.457 2.985v.396h6.974v-.396l-2.456-2.985c-.291-.343-.344-.502-.344-1.03V18.42l6.127 13.364h.714l5.256-13.364v10.644c0 .29 0 .342-.185.528l-1.848 1.796v.396h9.19v-.396l-1.822-1.796c-.184-.186-.21-.238-.21-.528V15.937c0-.291.026-.344.21-.528l1.823-1.797v-.396h-6.471l-4.622 11.542-5.203-11.542h-6.79v.396l2.14 2.64c.239.292.291.37.291.768v10.353z"></path></svg>
       </a>
     </div>
     <div class="announceText">
@@ -18,7 +18,7 @@ title: blog
 
 <section class="blog">
  	<h1>The Blog</h1>
-    <p class="subtitle">I blog about <a href="#">HTML5<i class="icon-html5"></i></a>, <a href="#">Game Development<i class="icon-gamepad"></i></a>, <a href="#">Web Development<i class="icon-laptop"></i></a> and just <a href="#">Life</a> in China</p>
+    <p class="subtitle">I blog about <a href="#">UX/UI Design<i class="icon-pencil"></i></a>, <a href="#">Game Development<i class="icon-gamepad"></i></a>, <a href="#">HTML5<i class="icon-html5"></i></a> and just <a href="#">Life</a> in China</p>
     <article>
 
     	<ul class="posts">
