Updated poly stuff
and added some games

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ title: home
 
         <p>
         	<a id="show-all" class="icon-plus" href="#"></a>
+					<a id="toggle-poly" class="icon-codeopen" href="#"></a>
         </p>
 
         <article class="my-body">
