--- a/games.html
+++ b/games.html
@@ -8,12 +8,23 @@ title: games
 
         <article>
 
+          <h2>Rim Map</h2>
+          <p>A webapp that lets you view your Rimworld maps in a web browser!</p>
+          <img src="img/Screenshot1_v4.png" alt="Rimmap screenshot 1" />
+          <p>
+
+          <a title="Play Rimmap" href="http://jamessimo.itch.io/rimmap" target="_blank"><i class="icon-gamepad"></i>&nbsp;Play on itch.io</a>
+
+          </p>
+          <hr>
+
           <h2>Tycoon Game</h2>
           <p>I am currently working on a new project which is in the vein of old 90's classic "Tycoon" style PC games. I will update once I have finished the Early Alpha.</p>
-
+          <p>
           <img src="img/teaserf.jpg" alt="OOohhhh mysterious " />
+ </p>
+ <hr>
 
-          &nbsp;
 		   <h2>Reach for the Star!</h2>
 		    <p>
           Reach for the Star is a small physics puzzle game I developed for iOS and Android built using HTML5 & Javascript using <a href="http://iio.js.org" target="_blank">iio.js</a> &amp; <a href="http://cocoon.io/" target="_blank">Cocoon</a>
@@ -23,29 +34,34 @@ title: games
 		    	<img src="img/blockstacking.png" alt="Reach for the Star screenshot 1" />
 		    <p>
 		    	<a title="Reach for the Star trailer on YouTube" href="https://www.youtube.com/watch?v=RMZplixVwvE" target="_blank"><i class="icon-desktop"></i>&nbsp;View Trailer</a>
+           <a title="Play Reach for the Star" href="http://jamessimo.itch.io/reach-for-the-star" target="_blank"><i class="icon-gamepad"></i>&nbsp;Play on itch.io</a>
+
 		    </p>
 
+        <hr>
 
  			<h2>Commuter Fling!</h2>
  			<p>My first entry into the HTML5 game world. You have to throw commuters across a river into their correct companies during rush hour. This game is currently being ported to iPad (iOS).</p>
 
  			<img src="img/commuterfling.png" alt="Commuter Fling screenshot 1" />
  			<p>
- 				<a title="Commuter Fling!" href="http://jamessimo.github.io/Commuter-Fling/comfling140514" target="_blank"><i class="icon-globe"></i>&nbsp;visit game site (BETA)</a>
+ 				<a title="Commuter Fling!" href="http://jamessimo.github.io/Commuter-Fling/comfling140514" target="_blank"><i class="icon-gamepad"></i>&nbsp;Play now</a>
  			</p>
+      <hr>
 
 	    	<h2>Crazy Lunar Taxi</h2>
 	    	<p>Akin to the old Sega "Crazy Taxi" and Ataris 1979 "Lunar Lander". Its the future and you have to pickup passangers and get them to there destination as soon as possible. Built in Unity 3, currently on hiatus.</p>
 	    	<img src="img/crazytaxi.png" alt="Crazy Lunar Taxi screenshot 1"/>
 	    	<p>
-	    		<a title="Crazy Lunar Taxi" href="http://crazylunartaxi.tumblr.com/" target="_blank"><i class="icon-globe"></i>&nbsp;visit game site</a>
+	    		<a title="Crazy Lunar Taxi" href="http://crazylunartaxi.tumblr.com/" target="_blank"><i class="icon-globe"></i>&nbsp;Visit game site</a>
 	    	</p>
+        <hr>
 
 	    	<h2>Face Glof</h2>
 	    	<p>Made in 48 hours with 3 other people for Cambridge Games Jam 2010 (Brains Eden Jam).</p>
 	    	<img src="img/faceglof.jpg" alt="Face Glof screenshot 1"/>
 	    	<p>
-	    		<a title="Face Glof" href="http://cambridgeindies.com/games/face-glof-0" target="_blank"><i class="icon-globe"></i>&nbsp;visit game site</a>
+	    		<a title="Face Glof" href="http://cambridgeindies.com/games/face-glof-0" target="_blank"><i class="icon-globe"></i>&nbsp;Visit game site</a>
 	    	</p>
 	    </article>
 	</section>
